Fix alignment on mobile page

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -41,9 +41,11 @@
 
   & .info-container {
     margin: 0 auto;
+    text-align: center;
 
     @media (--full-grid-container) {
       margin: 0;
+      text-align: left;
     }
   }
 
@@ -51,13 +53,8 @@
     line-height: 1.7;
     font-size: 1.1rem;
     letter-spacing: 0.05em;
-    text-align: center;
     max-width: 35rem;
     color: color-mod(var(--primary-color) tint(60%));
-
-    @media (--full-grid-container) {
-      text-align: left;
-    }
   }
 }
 
